--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">8dp</dimen>
     <dimen name="profile_margin">8dp</dimen>
+    <dimen name="statusBarSize">24dp</dimen>
 </resources>
