--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,38 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                 android:id="@+id/activity_fragment_container"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"/>
+
+    <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|bottom"
+            android:gravity="bottom"
             android:layout_marginBottom="88dp"
-            android:src="@drawable/ic_add"
-            app:useCompatPadding="true"/>
+            android:layout_gravity="bottom"
+            app:layout_behavior="com.kaloglu.sample.utils.RelativeLayoutBehavior">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:src="@drawable/ic_add"
+                app:useCompatPadding="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="16dp"
+                android:tint="@color/colorPrimary"
+                app:elevation="8dp"/>
+    </RelativeLayout>
 
     <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            app:selectedBackgroundVisible="false"/>
+            app:selectedBackgroundVisible="false"
+            app:elevation="8dp"
+            app:itemBackground="@color/colorPrimary"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
