--- a/app/src/main/res/layout/main/layout/activity_main.xml
+++ b/app/src/main/res/layout/main/layout/activity_main.xml
@@ -13,7 +13,7 @@
             android:layout_height="match_parent"/>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                 android:id="@+id/activity_fragment_container"
+                 android:id="@+id/fragment_container"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"/>
 
